Fix deprecation warnings for JDK 21; update docs (#2437)